--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,16 @@ h1 {
 }
 
 .red {
-  background: rgb(255, 0, 0);
+  background: linear-gradient(
+    180deg,
+    rgb(255, 0, 0) 0%,
+    rgb(0, 255, 0) 50%,
+    rgb(0, 0, 255) 100%
+  );
 }
 
 .green {
-  background-color: #007F00;
+  background-color: #007f00;
 }
 
 .blue {
