--- a/styles.css
+++ b/styles.css
@@ -10,19 +10,18 @@ h1 {
 
 .red {
   background: linear-gradient(
-    180deg,
-    rgb(255, 0, 0) 0%,
-    rgb(0, 255, 0) 50%,
-    rgb(0, 0, 255) 100%
+    rgb(122, 74, 14),
+    rgb(245, 62, 113),
+    rgb(162, 27, 27)
   );
 }
 
 .green {
-  background-color: #007f00;
+  background: linear-gradient(#55680d, #71f53e, #116c31);
 }
 
 .blue {
-  background-color: hsl(240, 100%, 50%);
+  background: hsl(240, 100%, 50%);
 }
 
 .container {
