--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,10 @@ h1 {
   background-color: rgb(255, 255, 255);
   padding: 10px 0;
 }
+
+.sleeve {
+  background-color: white;
+  opacity: 0.5;
+  width: 110px;
+  height: 25px;
+}
