--- a/styles.css
+++ b/styles.css
@@ -34,8 +34,7 @@ h1 {
 }
 
 .sleeve {
-  background-color: white;
-  opacity: 0.5;
+  background-color: rgba(255, 255, 255, 50%);
   width: 110px;
   height: 25px;
 }
