--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,12 @@ h1 {
   width: 110px;
   height: 25px;
 }
+
+.cap {
+  width: 60px;
+  height: 25px;
+}
+
+.cap, .sleeve {
+  display: inline-block;
+}
