--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ h1 {
 
 .sleeve {
   background-color: rgba(255, 255, 255, 50%);
+  border-left-width: 10px;
   width: 110px;
   height: 25px;
 }
@@ -44,6 +45,7 @@ h1 {
   height: 25px;
 }
 
-.cap, .sleeve {
+.cap,
+.sleeve {
   display: inline-block;
 }
