--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ h1 {
 .sleeve {
   background-color: rgba(255, 255, 255, 50%);
   border-left-width: 10px;
+  border-left-style: solid;
   width: 110px;
   height: 25px;
 }
