--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,7 @@ h1 {
 
 .sleeve {
   background-color: rgba(255, 255, 255, 50%);
-  border-left-width: 10px;
-  border-left-style: solid;
+  border-left: 10px solid black;
   width: 110px;
   height: 25px;
 }
