--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,12 @@ h1 {
     rgb(245, 62, 113),
     rgb(162, 27, 27)
   );
+  box-shadow: -5px -5px red;
 }
 
 .green {
   background: linear-gradient(#55680d, #71f53e, #116c31);
+  box-shadow: 5px 5px 5px green;
 }
 
 .blue {
@@ -35,7 +37,7 @@ h1 {
 
 .sleeve {
   background-color: rgba(255, 255, 255, 50%);
-  border-left: 10px solid black;
+  border-left: 10px double rgba(0, 0, 0, 0.75);
   width: 110px;
   height: 25px;
 }
