spreadRadius in boxshadow

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ h1 {
     rgb(245, 62, 113),
     rgb(162, 27, 27)
   );
-  box-shadow: -5px -5px red;
+  box-shadow: 0px 0px 20px 0 red;
 }
 
 .green {
@@ -28,6 +28,7 @@ h1 {
     hsl(223, 90%, 60%),
     hsl(240, 56%, 42%)
   );
+  box-shadow: 0 0 0 5px blue;
 }
 
 .container {
