--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ h1 {
 
 .green {
   background: linear-gradient(#55680d, #71f53e, #116c31);
-  box-shadow: 0 0 20px 0 #3B7E20CC;
+  box-shadow: 0 0 20px 0 #3b7e20cc;
 }
 
 .blue {
@@ -28,7 +28,7 @@ h1 {
     hsl(223, 90%, 60%),
     hsl(240, 56%, 42%)
   );
-  box-shadow: 0 0 20px 0px blue;
+  box-shadow: 0 0 20px 0px hsl(223, 59%, 31%, 0.8);
 }
 
 .container {
